# angora_closure

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  angora_main_fuzz.c  angora_shell.sh  docker-compose.yaml  fast_main.sh  fast_shell.sh  global_mem.c  normal_shell.sh  shell.sh  track_shell.sh
closure/: Cargo.toml
closure/src/: general_functions.rs  lib.rs  my_constants.rs
common/src/: cond_stmt_base.rs  config.rs  shm.rs
docs/: build_target.md  environment_variables.md  exploitation.md  overview.md
fuzzer/: Cargo.toml
fuzzer/src/: branches.rs  command.rs  fuzz_init.rs  fuzz_loop.rs  fuzz_main.rs  lib.rs
fuzzer/src/cond_stmt/: cond_state.rs  cond_stmt.rs  output.rs  shm_conds.rs
fuzzer/src/depot/: depot.rs  mod.rs  sync.rs
fuzzer/src/executor/: executor.rs  forksrv.rs  mod.rs  status_type.rs
fuzzer/src/mut_input/: rw.rs  serialize.rs
fuzzer/src/search/: gd.rs  mod.rs
fuzzer/src/stats/: state.rs
fuzzer/src/track/: fparser.rs  load_pin_data.rs
fuzzer_normal/: CMakeLists.txt  Makefile  command_fuzz.c  coverage_fuzz.c  global_normal_fuzz.c  main_fuzz.c  mutate_fuzz.c  my_lib_fuzz.c
fuzzer_normal/include/: command_fuzz.h  coverage_fuzz.h  main_fuzz.h  mutate_fuzz.h  my_lib_fuzz.h
include/: CloneGlobalsPass.h  Common.h  ExitHookPass.h  FFI.h  FileHookPass.h  HeapResetPass.h  ModifyStubPass.h  RenameMainPass.h
llvm_mode/: CMakeLists.txt
llvm_mode/closure/: CMakeLists.txt  CloneGlobalsPass.cpp  Common.cpp  ExitHookPass.cpp  FileHookPass.cpp  HeapResetPass.cpp  ModifyStubPass.cpp  Pass.cpp  RenameMainPass.cpp
llvm_mode/compiler/: angora_clang.c
llvm_mode/external_lib/: io_func.c  stdalloc.c
main_fuzzer/: Cargo.toml
main_fuzzer/src/: branches.rs  fuzz_loop.rs  fuzz_main.rs
main_fuzzer/src/executor/: executor.rs  forksrv.rs
runtime/src/: heapmap.rs  tag_set.rs
runtime_fast/: Cargo.toml  build.rs
runtime_fast/src/: context.c  fast.rs  forkcli.rs  shm_branches.rs  shm_conds.rs
tests/: closure_test.sh
